--- a/notes/references.bib
+++ b/notes/references.bib
@@ -1031,3 +1031,10 @@
 	author = {Karpathy},
 	note = {Accessed: 2022-05-05}
 }
+
+@inproceedings{Meng2019SphericalTE,
+	title={Spherical Text Embedding},
+	author={Yu Meng and Jiaxin Huang and Guangyuan Wang and Chao Zhang and Honglei Zhuang and Lance M. Kaplan and Jiawei Han},
+	booktitle={NeurIPS},
+	year={2019}
+}
