--- a/notes/references.bib
+++ b/notes/references.bib
@@ -1036,5 +1036,41 @@
 	title={Spherical Text Embedding},
 	author={Yu Meng and Jiaxin Huang and Guangyuan Wang and Chao Zhang and Honglei Zhuang and Lance M. Kaplan and Jiawei Han},
 	booktitle={NeurIPS},
-	year={2019}
+	year={2019},
+	eprint={1911.01196},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL}
+}
+
+@inproceedings{radford2021learning,
+	title={Learning transferable visual models from natural language supervision},
+	author={Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and others},
+	booktitle={International conference on machine learning},
+	pages={8748--8763},
+	year={2021},
+	organization={PMLR},
+	eprint={2103.00020},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV}
+}
+
+@misc{ouyang2022training,
+	title={Training language models to follow instructions with human feedback},
+	author={Ouyang, Long and Wu, Jeff and Jiang, Xu and Almeida, Diogo and Wainwright, Carroll L and Mishkin, Pamela and Zhang, Chong and Agarwal, Sandhini and Slama, Katarina and Ray, Alex and others},
+	year={2022},
+	eprint={2203.02155},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL}
+}
+
+@misc{ChatGPT, 
+	title={ChatGPT},
+	author={OpenAI},
+	url={https://chat.openai.com/}, 
+	note={\url{https://chat.openai.com/}},
+	journal={ChatGPT}, 
+	publisher={OpenAI},
+	date=2023,
+	month=02,
+	day=02
 }
