--- a/notes/references.bib
+++ b/notes/references.bib
@@ -1063,6 +1063,15 @@
 	primaryClass={cs.CL}
 }
 
+@misc{Ramesh2022HierarchicalTI,
+	title={Hierarchical Text-Conditional Image Generation with CLIP Latents},
+	author={Aditya Ramesh and Prafulla Dhariwal and Alex Nichol and Casey Chu and Mark Chen},
+	year={2022},
+	eprint={2204.06125},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV}
+}
+
 @misc{ChatGPT, 
 	title={ChatGPT},
 	author={OpenAI},
